--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ python = "^3.12"
 django = "^5.1.2"
 djangorestframework = "^3.15.2"
 pydantic-settings = "^2.6.0"
+drf-yasg = "^1.21.8"
+django-cors-headers = "^4.6.0"
+djangorestframework-simplejwt = "^5.3.1"
+django-filter = "^24.3"
+psycopg-binary = "^3.2.3"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
